暂时修改.env为开发环境配置

--- a/.env
+++ b/.env
@@ -38,7 +38,7 @@ log_traffic_dynamodb = 'false'
 
 # database 数据库配置
 db_driver = 'mysql'
-db_host = '45.78.57.84'
+db_host = '10.10.40.139'
 db_port = '3306'
 db_database = 'shadowsocks'
 db_username = 'ss'
@@ -49,7 +49,7 @@ db_prefix = ''
 
 # redis
 redis_scheme = 'tcp'
-redis_host = 'localhost'
+redis_host = '10.10.40.139'
 redis_port = '6380'
 redis_database = '0'
 redis_pass = ''
