--- a/.env
+++ b/.env
@@ -39,10 +39,10 @@ log_traffic_dynamodb = 'false'
 # database 数据库配置
 db_driver = 'mysql'
 db_host = '45.78.57.84'
-db_port = '3306'
+db_port = '56199'
 db_database = 'shadowsocks'
 db_username = 'ss'
-db_password = 'ss'
+db_password = 'lBe%tNKf'
 db_charset = 'utf8'
 db_collation = 'utf8_general_ci'
 db_prefix = ''
