--- a/.env
+++ b/.env
@@ -49,10 +49,10 @@ db_prefix = ''
 
 # redis
 redis_scheme = 'tcp'
-redis_host = '45.78.57.84'
-redis_port = '6380'
+redis_host = '127.0.0.1'
+redis_port = '49986'
 redis_database = '0'
-redis_pass = ''
+redis_pass = 'vra22Y&h'
 
 # mailgun
 mailgun_key = ''
