use email verify

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 key = 'woshichenjianglong'
 debug =  'false'  //  正式环境请确保为false
 appName = 'wormhole-vpn'             //站点名称
-baseUrl = 'https://www.google.com'            // 站点地址
+baseUrl = 'http//www.wormholevpn.cn'            // 站点地址
 timeZone = 'PRC'        // RPC 天朝时间  UTC 格林时间
 pwdMethod = 'md5'       // 密码加密   可选 md5,sha256
 salt = ''               // 密码加密用，从旧版升级请留空
@@ -16,22 +16,22 @@ tokenDriver = 'db'
 // mu key 用于校验ss-go mu的请求
 muKey = ''
 // 邮件
-mailDriver = 'mailgun'   // mailgun   #smtp不在支持,仅供测试
+mailDriver = 'smtp'   // mailgun   #smtp不在支持,仅供测试
 
 // 邮箱验证设置
-emailVerifyEnabled = 'false' // 是否开启注册时邮箱验证 (true:开启 false:关闭)
+emailVerifyEnabled = 'true' // 是否开启注册时邮箱验证 (true:开启 false:关闭)
 emailVerifyCodeLength = '8'  // 邮箱验证代码长度
-emailVerifyTTL = '30'        // 验证代码有效时间 单位分钟
+emailVerifyTTL = '20'        // 验证代码有效时间 单位分钟
 
 // 用户签到设置
-checkinTime = '22'      // 签到间隔时间 单位小时
-checkinMin = '93'       // 签到最少流量 单位MB
-checkinMax = '97'       // 签到最多流量
+checkinTime = '12'      // 签到间隔时间 单位小时
+checkinMin = '8'       // 签到最少流量 单位MB
+checkinMax = '8'       // 签到最多流量
 
 //
-defaultTraffic = '50'      // 用户初始流量 单位GB
+defaultTraffic = '0'      // 用户初始流量 单位GB
 // 注册后获得的邀请码数量
-inviteNum = '5'
+inviteNum = '13'
 
 // 记录流量日志到dynamodb ,beta,请勿开启
 log_traffic_dynamodb = 'false'
@@ -60,12 +60,12 @@ mailgun_domain = ''
 mailgun_sender = ''
 
 # smtp
-smtp_host = ''
-smtp_username = ''
-smtp_port = ''
-smtp_name = ''
-smtp_sender = ''
-smtp_passsword = ''
+smtp_host = '' // e.g. smtp.sina.com
+smtp_username = '' //邮箱前缀najooy
+smtp_port = '' //25
+smtp_name = '' //收件人会看到 新浪邮箱团队 <sinamail@sina.com> 其中 新浪邮箱团队 就是smtp_name
+smtp_sender = '' //najooy@sina.com应该和smtp_username保持一致
+smtp_passsword = '' //***
 smtp_ssl = 'true'
 
 # aws
