--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 key = 'woshichenjianglong'
 debug =  'false'  //  正式环境请确保为false
 appName = 'wormhole-vpn'             //站点名称
-baseUrl = 'http//www.wormholevpn.cn'            // 站点地址
+baseUrl = 'http//www.wormholess.site/'            // 站点地址
 timeZone = 'PRC'        // RPC 天朝时间  UTC 格林时间
 pwdMethod = 'md5'       // 密码加密   可选 md5,sha256
 salt = ''               // 密码加密用，从旧版升级请留空
